# CronBot

./: .env.example  .gitignore  CHANGELOG.md  README.md  bulk.csv.example  install-cli.cmd  install-cli.ps1  install-cli.sh  pyproject.toml  requirements.txt
src/: cronbot_entry.py  main.py
src/cronbot/: config.py  exceptions.py
src/cronbot/automation/: browser.py
src/cronbot/cli/: ui.py
src/cronbot/core/: bulk.py  editor.py  llm.py
